--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node app && babel dist --out-dir dist"
+    "build": "node app && babel dist --out-dir dist",
+    "format": "prettier --write src/**/*.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-perfectionist": "^4.15.1",
-    "eslint-plugin-promise": "^7.2.1"
+    "eslint-plugin-promise": "^7.2.1",
+    "prettier": "3.6.2"
   }
 }
