--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node app && babel dist --out-dir dist",
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write src/**/*.js",
+    "stylelint": "stylelint src/**/*.js",
+    "stylelint:fix": "stylelint src/**/*.js --fix"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,10 @@
     "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-perfectionist": "^4.15.1",
     "eslint-plugin-promise": "^7.2.1",
-    "prettier": "3.6.2"
+    "postcss-styled-syntax": "^0.7.1",
+    "prettier": "3.6.2",
+    "stylelint": "^16.25.0",
+    "stylelint-config-clean-order": "^7.0.0",
+    "stylelint-config-standard": "^39.0.1"
   }
 }
