--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node app && babel dist --out-dir dist",
+    "dev": "concurrently \"vite\" \"vite build --watch\"",
     "format": "prettier --write src/**/*.js",
     "stylelint": "stylelint src/**/*.js",
     "stylelint:fix": "stylelint src/**/*.js --fix"
@@ -15,9 +15,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.28.3",
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-n": "^17.23.1",
@@ -27,6 +26,8 @@
     "prettier": "3.6.2",
     "stylelint": "^16.25.0",
     "stylelint-config-clean-order": "^7.0.0",
-    "stylelint-config-standard": "^39.0.1"
+    "stylelint-config-standard": "^39.0.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2"
   }
 }
