feat: integrate TypeScript support with ESLint and Stylelint configurations, add tsconfig.json, and update dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,12 @@
     "source.fixAll.stylelint": "always"
   },
   "eslint.validate": [
-    "javascript"
+    "javascript",
+    "typescript"
   ],
   "stylelint.validate": [
     "css",
-    "javascript"
+    "javascript",
+    "typescript"
   ],
 }
