--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"vite\" \"vite build --watch\"",
-    "format": "prettier --write src/**/*.js",
-    "stylelint": "stylelint src/**/*.js",
-    "stylelint:fix": "stylelint src/**/*.js --fix"
+    "format": "prettier --write src/**/*.{js,ts}",
+    "stylelint": "stylelint src/**/*.{js,ts}",
+    "stylelint:fix": "stylelint src/**/*.{js,ts} --fix"
   },
   "keywords": [],
   "author": "",
