--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "userscript-starter",
-  "version": "1.5.0",
-  "description": "",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "A modern, well-structured starter template for creating browser userscripts.",
+  "main": "index.user.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
