--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-promise": "^7.2.1",
     "postcss-styled-syntax": "^0.7.1",
     "prettier": "3.6.2",
+    "sass": "^1.94.0",
     "stylelint": "^16.25.0",
     "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-standard": "^39.0.1",
