--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "stylelint": "^16.25.0",
     "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-standard": "^39.0.1",
+    "stylelint-scss": "^6.12.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
     "vite-plugin-solid": "^2.11.10"
