--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,50 +5,49 @@ on:
     branches:
       - main
     paths-ignore:
-      - 'dist/**'
-      - '**.md'
+      - "dist/**"
+      - "**.md"
   pull_request:
     branches:
       - main
     paths-ignore:
-      - 'dist/**'
-      - '**.md'
+      - "dist/**"
+      - "**.md"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     permissions:
       contents: write
-    
+      pages: write
+      id-token: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-      
+          node-version: "20"
+          cache: "npm"
+
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Build project
         run: npm run build
-      
-      - name: Commit dist files
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -f dist/
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "chore: build dist files [skip ci]"
-            git push
-          fi
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "./dist"
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
