feat: refactor App component to use Counter component, update styles, and enhance ESLint validation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
   },
   "eslint.validate": [
     "javascript",
-    "typescript"
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
   ],
   "stylelint.validate": [
     "css",
